Closed Bug 842138 Opened 12 years ago Closed 12 years ago

Incorrect glyph rotations with with svg.text.css-frames.enabled

Categories

(Core :: SVG, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla21

People

(Reporter: longsonr, Assigned: heycam)

References

()

Details

Attachments

(1 file)

No description provided.
Blocks: svgtext
Note that we currently fail that test, with our existing text layout code.
Attached patch patchSplinter Review
We should propagate rotate="" values out to the end of a <tspan> element, even if a parent element has specified a rotation value for us.
Assignee: nobody → cam
Status: NEW → ASSIGNED
Attachment #715265 - Flags: review?(roc)
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: