Bug 842138 - Propagate rotate="" values even if rotations were specified on a parent element. r=roc